fix: Heatmap color in dark mode

--- a/frappe/public/scss/desk/dark.scss
+++ b/frappe/public/scss/desk/dark.scss
@@ -120,4 +120,11 @@
 	.form-control:focus {
 		color: white;
 	}
+
+	// find better fix
+	.heatmap-chart {
+		g > rect[fill="#ebedf0"] {
+			fill: var(--gray-700);
+		}
+	}
 }
